# kubik

./: .gitignore  CMakeLists.txt  README.md
include/kubik/: AmplitudeClip.hpp  FftFilter.hpp  Resample.hpp  SegyCube.hpp  SystemMemory.hpp  types.hpp
src/: main.cpp
src/dsp/: FftFilter.cpp  FftFilter2D.cpp
src/gui/: CollapsibleGroupBox.cpp  CollapsibleGroupBox.hpp  ColorSchemes.cpp  ColorSchemes.hpp  CubeNavigator.cpp  CubeNavigator.hpp  DiscreteValueSpinBox.cpp  DiscreteValueSpinBox.hpp  FftFilter2DDialog.cpp  FftFilter2DDialog.hpp  FftFilterDialog.cpp  FftFilterDialog.hpp  HelpDialog.cpp  HelpDialog.hpp  MainWindow.cpp  MainWindow.hpp  SegyHeaderDialog.cpp  SegyHeaderDialog.hpp  SlicePreviewWidget.cpp  SlicePreviewWidget.hpp  SliceView.cpp  SliceView.hpp  Spectrum2DPlotWidget.cpp  Spectrum2DPlotWidget.hpp  SpectrumPlotWidget.cpp  SpectrumPlotWidget.hpp  SpinBoxFix.cpp  SpinBoxFix.hpp  SurveyCoordinatesDialog.cpp  SurveyCoordinatesDialog.hpp  SurveyMapWidget.cpp  SurveyMapWidget.hpp
src/segy/: Resample.cpp  SegyCube.cpp
src/util/: SystemMemory.cpp
tests/: segy_open_test.cpp
